@@ -1,3 +1,7 @@
+(11/28/2006)
+
+*** Updated the file resource implementation
+
 (10/23/2006)
 
 *** made std* relative to the job directory
